<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rentalapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:name="com.example.rentalapp.ui.gallery.GalleryFragment"
        android:id="@+id/viewgallery"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:name="com.example.rentalapp.ui.gallery.GalleryFragment"
        android:id="@+id/ourlocation"
        android:label="@string/our_location" />
    tools:layout="@layout/fragment_ourlocation" />

    <fragment
        android:name="com.example.rentalapp.ui.slideshow.SlideshowFragment"
        android:id="@+id/testimonials"

        android:label="@string/testimonials" />
    tools:layout="@layout/fragment_testimonials" />

    <fragment
        android:name="com.example.rentalapp.ui.tools.ToolsFragment"
        android:id="@+id/contactus"
        android:label="@string/contact_us" />
    tools:layout="@layout/fragment_contactus" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.rentalapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.rentalapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>