<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".register">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="#FFA233"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />


    <EditText
        android:id="@+id/myname"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="365dp"
        android:background="#B22C2929"
        android:ems="10"
        android:hint="@string/Fullname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text=""
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText

        android:id="@+id/myemail"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#B22C2929"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:text=""
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myname" />

    <EditText
        android:id="@+id/myphone"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#B22C2929"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="15dp"
        android:text=""
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myemail" />

    <Button
        android:id="@+id/register"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mypass"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/createtext"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/already_have_an_account_login_here"
        android:textAlignment="center"
        android:textColor="#FFA233"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/mypass"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#B22C2929"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:text=""
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myphone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mloginButton"
        app:layout_constraintVertical_bias="0.091" />
</androidx.constraintlayout.widget.ConstraintLayout>